grid based started

--- a/universalDataEntry/index.html
+++ b/universalDataEntry/index.html
@@ -36,8 +36,8 @@
 					<td id="tables-list-section" class="center scrollable"></td>
 
 					<td id="confirm-selection-section" class="center scrollable">
-						<button id="go-to-form-btn" onclick="rtGeneratedFormPage()" disabled="true">Form based Data Entry</button> <br /> <br />
-						<button id="go-to-form-btn" onclick="rtGeneratedFormPage()" disabled="true">Grid based Data Entry</button>
+						<button id="go-to-form-btn" class="operation-btns" onclick="rtGeneratedFormPage()" disabled="true">Form based Data Entry</button> <br /> <br />
+						<button id="go-to-grid-btn" class="operation-btns" onclick="rtGeneratedGridPage()" disabled="true">Grid based Data Entry</button>
 					</td>
 				</tr>
 			</tbody>
