--- a/universalDataEntry/gridBased/index.html
+++ b/universalDataEntry/gridBased/index.html
@@ -6,8 +6,17 @@
 	<style type="text/css">
 
 		
+		.grid-table-header-row th {
+			background: #eee; 
+			padding:2px 6px; 
+			position: -webkit-sticky; 
+			position: -moz-sticky; 
+			position: -ms-sticky; 
+			position: -o-sticky; 
+			position: sticky; 
+			top: 0;}
+
 		.field-name { 
-			border: solid 1px black;
 			font-size: 30px;
 			width: 100px;
 		}
@@ -24,6 +33,9 @@
 		.grid-table-body-data {
 			border: solid 1px black;
 		}
+
+		
+
 
 
 	</style>
